--- a/styles/main.css
+++ b/styles/main.css
@@ -136,4 +136,8 @@ body {
 	background-image: none !important;
 }
 
+.high-contrast #support {
+    background: linear-gradient(45deg, #ff69b4, #ff1493);
+  }
+
 
